--- a/sensorMongo/pom.xml
+++ b/sensorMongo/pom.xml
@@ -29,5 +29,10 @@
         <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
         <version>1.0.2</version>
     </dependency>
+    <dependency>
+        <groupId>org.mongodb</groupId>
+        <artifactId>mongodb-driver</artifactId>
+        <version>3.6.3</version>
+    </dependency>
 </dependencies>
 </project>
