--- a/sensorMongo/.classpath
+++ b/sensorMongo/.classpath
@@ -16,5 +16,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files/SQL Anywhere 17/Java/sajdbc4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
